Fix text align for headers

--- a/_sass/_old.scss
+++ b/_sass/_old.scss
@@ -81,46 +81,6 @@ div#content {
   font-size: 14px;
 }
 
-div#sidebar {
-  width: 270px;
-  float: left;
-  font-size: 14px;
-  background-color: #F4F4F4;
-  padding: 10px;
-}
-
-div#sidebar h2 {
-  font-size: 14px;
-  font-weight: bold;
-  margin-bottom: 5px;
-  border-bottom: 1px solid black;
-}
-
-div#sidebar div.element div.title {
-  padding: 5px;
-  background-color: #326f9d;
-  color: #ffffff;
-  font-family: 'Droid Sans', serif; 
-}
-
-div#sidebar form {
-  margin-top: 15px; 
-}
-
-div#sidebar form input,
-div#sidebar form textarea {
-  width: 90%;
-  margin-bottom: 5px;
-}
-
-div#sidebar div.element div.content {
-  padding: 5px;
-}
-
-div#sidebar div.element {
-  margin-bottom: 5px;
-}
-
 div#team div.berater {
   clear: both;
   margin-bottom: 20px;
@@ -140,6 +100,7 @@ div#team div.berater h2 {
   font-size: 18px;
   border-bottom: 1px solid #000000;
   margin-bottom: 10px;
+  text-align: left;
 }
 
 div#team div.berater div.profile {
@@ -161,6 +122,7 @@ div#content h1 {
   font-size: 18px;
   padding-bottom: 10px;
   font-weight: bold;
+  text-align: left;
 }
 
 div#content h2 {
@@ -170,6 +132,7 @@ div#content h2 {
   padding: 5px;
   margin-top: 20px;
   margin-bottom: 10px;
+  text-align: left;
 }
 
 div#content div.beschreibung {
